syntax = "proto3";
package pb;

message Message{
    bytes data = 1;
}

message MessageReply{
    bytes data = 1;
}

service NodeService {
    rpc SendMessage(Message) returns (MessageReply);
}
